add further x-wing test vectors and cleanup